# hexlet-git

./: .gitmodules
hexlet-code/: README.md  brain-even.cast  pyproject.toml
hexlet-code/brain_games/scripts/: brain_calc.py  brain_even.py
hexlet-hello-world/: pyproject.toml
hexlet_pytest/: pyproject.toml
hexlet_pytest/tests/: test_stack.py
tests/: test_capitalize.py
